# Programming-based-on-classes-and-templates-Labs

./: .gitignore  CMakeLists.txt  README.md
Lab 1/Lab 1/: CMakeLists.txt  Report1.docx  main.cpp
Lab 1/Lab 1/MyLib/: CMakeLists.txt  MyLib.cpp  MyLib.hpp
Lab 1/Lab 1/mymath/: CMakeLists.txt  mymath.cpp  mymath.hpp
Lab 1/Stash/Demonstration_Lab_1/: CMakeLists.txt  main.cpp
Lab 1/Stash/Static_Library/: CMakeLists.txt  library.cpp  library.hpp
Lab 1/Stash/demostatlib/: CMakeLists.txt  main.cpp
Lab 1/Stash/mylib/: CMakeLists.txt  libmylib.cpp
Lab 1/Stash/statlib/: CMakeLists.txt  library.cpp  library.h
Lab 2/: CMakeLists.txt  execution_modes.cpp  execution_modes.hpp  main.cpp
Lab 2.3/: CMakeLists.txt
Lab 2.3/Planet/: CMakeLists.txt  Planet.cpp  Planet.hpp
Lab 2/Libraries/: CMakeLists.txt
Lab 2/Libraries/AbstractObject/: AbstractObject.cpp  AbstractObject.hpp  CMakeLists.txt
Lab 2/Libraries/Database/: CMakeLists.txt  Database.cpp  Database.hpp
Lab 2/Libraries/MenuInterface/: CMakeLists.txt  MenuInterface.cpp  MenuInterface.hpp
Lab 2/Libraries/Planet/: CMakeLists.txt  Planet.cpp  Planet.hpp
Lab 2/Libraries/Road/: CMakeLists.txt  Road.cpp  Road.hpp
Lab 2/Stash/Lab 2/: .gitignore
Lab 2/Stash/Lab 2.2/: CMakeLists.txt  main.cpp
Lab 2/Stash/Lab 2.2/Planet/: CMakeLists.txt  Planet.cpp  Planet.hpp
Lab 2/Stash/Lab 2.3/: CMakeLists.txt  main.cpp
Lab 2/Stash/Lab 2.3/Planet/: Planet.cpp  Planet.hpp
Lab 2/Stash/Lab 2.3/Product/: CMakeLists.txt  Product.cpp  Product.hpp
Lab 2/Stash/Lab 2.4/: CMakeLists.txt  Roads.txt  funcs.hpp  main.cpp
Lab 2/Stash/Lab 2.4/Planets/: CMakeLists.txt  Planet.cpp  Planet.hpp
Lab 2/Stash/Lab 2.4/Roads/: CMakeLists.txt  Road.cpp  Road.hpp
Lab 2/Stash/Lab 2/Libraries/: CMakeLists.txt
Lab 2/Stash/Lab 2/Libraries/Planet/: CMakeLists.txt  Planet.cpp  Planet.hpp
Lab 2/cmake/: FindPlanet.cmake
Lab 3/: CMakeLists.txt  Fraction.hpp  Report 3.docx  main.cpp
Lab 3/Fraction/: CMakeLists.txt  Fraction.cpp  Fraction.hpp
Lab 3/Libraries/: CMakeLists.txt
Lab 3/Libraries/Fraction/: CMakeLists.txt  fraction.cpp  fraction.hpp
Lab 4/: CMakeLists.txt  Report 4.docx  main.cpp
Lab 4/MyStack/: CMakeLists.txt  MyStack.cpp  MyStack.hpp
Lab 5/: CMakeLists.txt
Lab 5.2/: CMakeLists.txt  Report 5.docx  main.cpp
Lab 5.2/MyContainers/: MySet.cpp  MySet.hpp  MyVector.cpp  MyVector.hpp
Lab 5/Lab 5/: main.cpp
Lab 5/Lab 5/MyContainers/: CMakeLists.txt  MyVector.hpp
Lab 5/MyContainers/: CMakeLists.txt  MySet.hpp  MyVector.hpp
Lab 5/Stash/Lab 5/: main.cpp
Lab 5/Stash/Lab 5/MyContainers/: MySet.cpp  MySet.hpp  MyVector.cpp  MyVector.hpp
Lab 7/: CMakeLists.txt  Report 7.docx  main.cpp
Lab 7/PrintEdition/: Book.cpp  Book.hpp  CMakeLists.txt  Journal.cpp  Journal.hpp  PrintEdition.cpp  PrintEdition.hpp  Textbook.cpp  Textbook.hpp
Lab 7/Report/: Inheritance pattern.graphml
Lab 8/: CMakeLists.txt  Report 8.docx
Lab 8/Problems/: CMakeLists.txt  Card.cpp  Card.hpp  Planet.cpp  Planet.hpp  planet.cpp  problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
Lab 8/Resources/: problem_3.txt  problem_3_out.txt
Libraries/Demostatlib/include/: libmylib.hpp
