add_executable(Problem_1 problem_1.cpp)
add_executable(Problem_2 problem_2.cpp)
add_executable(Problem_3 problem_3.cpp)
add_executable(Problem_4 problem_4.cpp)
add_executable(Problem_5 problem_5.cpp Planet.hpp Planet.cpp)
add_executable(Problem_6 problem_6.cpp)
add_executable(Problem_7 problem_7.cpp Card.hpp Card.cpp)
add_executable(Problem_8 problem_8.cpp)
